[project]
# name＝Registry 識別碼（小寫連字號、無空格）；發布後永久不可改。
name = "tag-semantic-search"
description = "AIPaintWorks tag semantic search — natural language (Chinese/English/Japanese) to Danbooru tags, as a ComfyUI sidebar panel."
version = "0.1.6"
license = { file = "LICENSE" }
# 前端相容需求：側欄面板用 Sidebar Tabs API（registerSidebarTab），需 ComfyUI frontend ≥1.2.4。
# comfy-cli 由此 dep 產出 supported_comfyui_frontend_version，供 Registry/Manager 顯示相容性。
dependencies = ["comfyui-frontend-package>=1.2.4"]

[project.urls]
Repository = "https://github.com/noirene0519/comfyui-aipaint-tags"

[tool.comfy]
PublisherId = "noirene0519"
DisplayName = "Tag Semantic Search"
# Icon（選填，可日後補）：公開圖示 URL（≤800x400，SVG/PNG/JPG/GIF）。留空即不設。
# Icon = "https://.../icon.png"
